--- a/javascript-course/practice/calculator.html
+++ b/javascript-course/practice/calculator.html
@@ -6,11 +6,12 @@
     <title>Calculator</title>
   </head>
   <body>
+    <p class="displayed-calculation"></p>
+
     <p>
       <button
         onclick="
-        calculation += '1'
-        console.log(calculation)
+        updateCalculation('1')
       "
       >
         1
@@ -18,8 +19,7 @@
 
       <button
         onclick="
-        calculation += '2'
-        console.log(calculation)
+        updateCalculation('2')
       "
       >
         2
@@ -27,8 +27,7 @@
 
       <button
         onclick="
-        calculation += '3'
-        console.log(calculation)
+        updateCalculation('3')
       "
       >
         3
@@ -36,8 +35,7 @@
 
       <button
         onclick="
-        calculation += ' + '
-        console.log(calculation)
+        updateCalculation(' + ')
       "
       >
         +
@@ -47,8 +45,7 @@
     <p>
       <button
         onclick="
-        calculation += '4'
-        console.log(calculation)
+        updateCalculation('4')
       "
       >
         4
@@ -56,8 +53,7 @@
 
       <button
         onclick="
-        calculation += '5'
-        console.log(calculation)
+        updateCalculation('5')
       "
       >
         5
@@ -65,8 +61,7 @@
 
       <button
         onclick="
-        calculation += '6'
-        console.log(calculation)
+        updateCalculation('6')
       "
       >
         6
@@ -74,8 +69,7 @@
 
       <button
         onclick="
-        calculation += ' - '
-        console.log(calculation)
+        updateCalculation(' - ')
       "
       >
         -
@@ -85,8 +79,7 @@
     <p>
       <button
         onclick="
-        calculation += '7'
-        console.log(calculation)
+        updateCalculation('7')
       "
       >
         7
@@ -94,8 +87,7 @@
 
       <button
         onclick="
-        calculation += '8'
-        console.log(calculation)
+        updateCalculation('8')
       "
       >
         8
@@ -103,8 +95,7 @@
 
       <button
         onclick="
-        calculation += '9'
-        console.log(calculation)
+        updateCalculation('9')
       "
       >
         9
@@ -112,8 +103,7 @@
 
       <button
         onclick="
-        calculation += ' * '
-        console.log(calculation)
+        updateCalculation(' * ')
       "
       >
         *
@@ -123,8 +113,7 @@
     <p>
       <button
         onclick="
-        calculation += '0'
-        console.log(calculation)
+        updateCalculation('0')
       "
       >
         0
@@ -132,8 +121,7 @@
 
       <button
         onclick="
-        calculation += '.'
-        console.log(calculation)
+        updateCalculation('.')
       "
       >
         .
@@ -141,8 +129,9 @@
 
       <button
         onclick="
-        // calculation += '1'
-        console.log(eval(calculation))
+        calculation = eval(calculation)
+        displayCalculation()
+        localStorage.setItem('calculation', calculation);
       "
       >
         =
@@ -150,16 +139,43 @@
 
       <button
         onclick="
-        calculation += ' / '
-        console.log(calculation)
+       updateCalculation(' / ')
       "
       >
         /
       </button>
     </p>
 
+    <p>
+      <button
+        onclick="
+        calculation = '';
+        displayCalculation()
+
+        // Remember to save the calculation here.
+        localStorage.setItem('calculation', calculation);
+      "
+      >
+        Clear
+      </button>
+    </p>
+
     <script>
-      let calculation = "";
+      let calculation = localStorage.getItem('calculation') || "";
+
+      // displayCalculation()
+
+      function updateCalculation(num) {
+        calculation += num;
+
+        displayCalculation()
+
+        localStorage.setItem("calculation", calculation);
+      }
+
+      function displayCalculation() {
+        document.querySelector('.displayed-calculation').innerHTML = calculation
+      }
     </script>
   </body>
 </html>
