--- a/javascript-course/practice/06-booleans.html
+++ b/javascript-course/practice/06-booleans.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script>
+      /*
       true;
       false;
 
@@ -29,8 +30,49 @@
       } else {
         console.log("You can not drive");
       }
+    */
 
+      /*
+    console.log(true && true)
+    console.log(0.2 >= 0 && 0.2 < 1 / 3)
+
+    console.log(true || false)
+
+    console.log(!true)
+    */
+
+      /*
+      if (0) {
+        console.log("truthy");
+      }
+
+      const cartQuantity = 5;
+
+      if (cartQuantity) {
+        console.log('cart has products')
+      }
+
+      console.log(!0)
+
+      console.log('text' / 5)
+
+      let variable1
+      console.log(variable1)
+
+      */
+
+      // Tenary Operator
+
+      const result = 0 ? 'truthy' : 'falsy'
+      console.log(result)
+
+      false && console.log('hello')
+
+      const message = 5 && 'hello'
+      console.log(message)
+
+      const currency = undefined || 'USD'
+      console.log(currency)
     </script>
-
   </body>
 </html>
