updated mortgage html and css file

--- a/frontendMentor/mortgage-repayment-calculator-main/index.html
+++ b/frontendMentor/mortgage-repayment-calculator-main/index.html
@@ -104,11 +104,30 @@
             repayments” again.
           </p>
 
-          <!-- <div class="result-box">
-            Your monthly repayments
+          <div class="result-box">
+            <div class="top-line"></div>
+            <div class="monthly-repayment">
+              <p class="monthly-repayment-title">
+                Your monthly repayments
+              </p>
 
-            Total you'll repay over the term
-          </div> -->
+              <h2 class="monthly-repayment-amount">
+                &#xA3;1,797.74
+              </h2>
+            </div>
+            
+             <div class="middle-line"></div>
+
+            <div class="term-repayment">
+              <p class="term-repayment-title">Total you'll repay over the term</p>
+
+              <h2 class="term-repayment-amount">
+                &#xA3;539,322.94
+              </h2>
+            </div>
+           
+          </div>
+
         </div>
       </div>
 
