--- a/javascript-course/exercise/exercise_9-shipping-practice.html
+++ b/javascript-course/exercise/exercise_9-shipping-practice.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOM Projects</title>
+    <title>Exercise 9 | DOM Projects</title>
   </head>
   <body>
     <p>YouTube Subscribe Button</p>
