--- a/javascript-course/exercise/exercise_9.html
+++ b/javascript-course/exercise/exercise_9.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document Object Model (DOM)</title>
+    <title>Exercise 9 | Document Object Model (DOM)</title>
   </head>
   <body>
     <button>9a</button>
