--- a/GSAP-course/index.html
+++ b/GSAP-course/index.html
@@ -11,6 +11,7 @@
         height: 100vh;
         display: flex;
         flex-direction: column;
+        overflow: hidden;
       }
 
       .header {
@@ -44,7 +45,7 @@
       .footer {
         height: 15vh;
         background-color: blue;
-        transform: translateY(-100%);
+        transform: translateY(100%);
       }
     </style>
   </head>
@@ -59,7 +60,7 @@
 
     <div class="content">
       <div class="sidebar left"></div>
-      <button class="button">Reverse</button>
+      <button class="button">Reverse!</button>
       <div class="sidebar right"></div>
     </div>
 
